eslint-error.log

> merch-crm@0.1.0 lint
> eslint


Oops! Something went wrong! :(

ESLint: 9.39.2

file:///Users/leonidmolchanov/Desktop/merch-crm/node_modules/@eslint/eslintrc/lib/config-array/override-tester.js:23
import minimatch from "minimatch";
       ^^^^^^^^^
SyntaxError: The requested module 'minimatch' does not provide an export named 'default'
    at #asyncInstantiate (node:internal/modules/esm/module_job:302:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:405:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:660:26)
    at async dynamicImportConfig (/Users/leonidmolchanov/Desktop/merch-crm/node_modules/eslint/lib/config/config-loader.js:186:17)
    at async loadConfigFile (/Users/leonidmolchanov/Desktop/merch-crm/node_modules/eslint/lib/config/config-loader.js:276:9)
    at async ConfigLoader.calculateConfigArray (/Users/leonidmolchanov/Desktop/merch-crm/node_modules/eslint/lib/config/config-loader.js:589:23)
    at async #calculateConfigArray (/Users/leonidmolchanov/Desktop/merch-crm/node_modules/eslint/lib/config/config-loader.js:743:23)
    at async directoryFilter (/Users/leonidmolchanov/Desktop/merch-crm/node_modules/eslint/lib/eslint/eslint-helpers.js:309:5)
    at async NodeHfs.<anonymous> (file:///Users/leonidmolchanov/Desktop/merch-crm/node_modules/@humanfs/core/src/hfs.js:586:29)
    at async NodeHfs.walk (file:///Users/leonidmolchanov/Desktop/merch-crm/node_modules/@humanfs/core/src/hfs.js:614:3)
